2006-01-07  David Hampton  <hampton@employees.org>

	* src/bin/gnucash-valgrind.in:
	* src/bin/Makefile.am: Add a script to invoke the new gnucash.bin
	executable via valgrind.

	* src/gnome/window-main-summarybar.c: Performance enhancements.
	Remove the model from the combo box before clearing and
	repopulating it.

2006-01-06  David Hampton  <hampton@employees.org>

	* src/import-export/hbci/dialog-hbcitrans.[ch]: 
	* src/import-export/hbci/glade/hbci.glade:
	* src/import-export/hbci/gnc-hbci-transfer.c: Make the HBCI
	Transfer dialog work again using a GtkListStore.

2006-01-04  David Hampton  <hampton@employees.org>

	* src/gnome-utils/ui/gnc-main-window-ui.xml:
	* src/gnome-utils/gnc-main-window.c: Add in some conditionally
	compiled hooks for turning callgrind on/off via the menus.

	* src/gnome/gnc-plugin-page-account-tree.c: Consolidate some
	common functionality.

	* src/register/register-gnome/combocell-gnome.c:
	* src/register/register-gnome/gnucash-item-list.[ch]:
	* src/register/ledger-core/split-register-load.c:
	* src/register/register-core/combocell.h: Load the entire data set
	into the combocell before enabling sorting.  Saves a tremendous
	amount of time.
	
	* src/backend/file/gnc-transaction-xml-v2.c:
	* lib/libqof/qof/gnc-numeric.c: A couple of performance tweaks.

2006-01-03  Joshua Sled  <jsled@asynchronous.org>

	* gnc-sxed-window-ui.xml: Remove unreferenced `TransactionAction`.

	* dialog-sxsincelast.c (sxsld_disposition_changed): change the
	assertion into a simple return-if-fail due to apparent change in
	the calling order in gtk 2.x...

2006-01-03  David Hampton  <hampton@employees.org>

	* src/engine/Transaction.c: When setting the amount of a split,
	don't call gnc_numeric_convert on it if the split isn't assigned
	to an account. This reduces the time spent loading a data file.

	* src/business/business-gnome/glade/invoice.glade: Couple the
	radio buttons in the unpost dialog.

	* src/gnome/top-level.c:
	* src/gnome/dialog-totd.c: